5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1593_588.log
== TEST (2019-03-28 10:41:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = valor // 100
notas50 = (valor % 100)//50
notas10 = (((valor % 100)%50)//10
			  
print(int(notas100))
print(int(notas50))
print(int(notas10))		  

-- ERROR:
File "XXXX", line 10
    print(int(notas100))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = valor // 100
notas50 = (valor % 100)//50
notas10 = (((valor % 100)%50)//10
			  
print(notas100)	  

-- ERROR:
File "XXXX", line 10
    print(notas100)	  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:43:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = valor // 100
notas50 = (valor % 100)//50
notas10 = (((valor % 100)%50)//10
			  
print(notas50)	  

-- ERROR:
File "XXXX", line 10
    print(notas50)	  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = int(valor // 100)
notas50 = int((valor % 100)//50)
notas10 = int(((valor % 100)%50)//10)
			  
print(notas50)	  

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = int(valor // 100)
notas50 = int((valor % 100)//50)
notas10 = int(((valor % 100)%50)//10)
			  
print(int(notas100))
print(int(notas50))
print(int(notas10))	  

-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:45:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

notas100 = int(valor // 100)
notas50 = int((valor % 100)//50)
notas10 = int(((valor % 100)%50)//10)
			  
print(int(notas100))
print(int(notas50))
print(int(notas10))	  

-- EXECUTION TIME:
0.158569
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
